--- a/splitted-kafka-asyncapi/asyncapi.yml
+++ b/splitted-kafka-asyncapi/asyncapi.yml
@@ -1,4 +1,4 @@
-asyncapi: '2.1.0'
+asyncapi: '2.2.0'
 id: 'urn:com:ddecathlon:test:domain:data'
 info:
   title: Domain Data
@@ -14,73 +14,31 @@ servers:
     url: kafka://kafka:9092
     protocol: kafka
     description: Test broker
-
-defaultContentType: application/json
-
 channels:
   myFunctionalData_v1:
     description: The topic where data event are stored
     subscribe:
-      summary: Inform about my functional data event
-      operationId: receiveFunctional Data
-      traits:
-        - $ref: '#/components/operationTraits/kafka'
       message:
-        $ref: '#/components/messages/myFuncData'
-
-components:
-  messages:
-    myFuncData:
-      name: FuncData
-      title: Functional Data
-      summary: Inform about my functional data.
-      contentType: application/json
-      traits:
-        - $ref: '#/components/messageTraits/commonHeaders'
-      payload:
-        $ref: "#/components/schemas/FuncDataPayload"
-      examples:
-        - name: ex1
-          summary: Example for first user
-          headers: 
-            my-app-header: 23
-          payload: 
-            id: '{{randomString(32)}}'
-            sendAt: '{{now()}}'
-            fullName: John Doe
-            email: john.doe@decathlon.com
-            age: 36
-
-  schemas:
-    FuncDataPayload:
-      type: object
-      properties:
-        id:
-          type: string
-        fullName:
-          type: string
-        email:
-          type: string
-          format: email
-        age:
-          type: integer
-          minimum: 18
-        sentAt:
-          type: string
-          format: date-time
-          
-  messageTraits:
-    commonHeaders:
-      headers:
-        type: object
-        properties:
-          my-app-header:
-            type: integer
-            minimum: 0
-            maximum: 100
-
-  operationTraits:
-    kafka:
-      bindings:
-        kafka:
-          clientId: my-app-id
+        bindings:
+          kafka:
+            key:
+              type: string
+              description: Timestamp of event as milliseconds since 1st Jan 1970
+        traits:
+          - $ref: 'https://raw.githubusercontent.com/remynollet/Kafka-tutoriel/main/splitted-kafka-asyncapi/ce-cloud.yaml'
+        headers:
+          type: object
+          properties:
+            custom-header:
+              type: string
+        contentType: avro/binary
+        schemaFormat: application/vnd.apache.avro+json;version=1.9.0
+        payload:
+          $ref: 'https://raw.githubusercontent.com/remynollet/Kafka-tutoriel/main/splitted-kafka-asyncapi/schema/schema.asvc'
+        examples:
+          - sample1:
+              $ref: 'https://raw.githubusercontent.com/remynollet/Kafka-tutoriel/main/splitted-kafka-asyncapi/sample/sample1.yaml'
+          - sample2:
+              $ref: 'https://raw.githubusercontent.com/remynollet/Kafka-tutoriel/main/splitted-kafka-asyncapi/sample/sample2.yaml'
+          - sample3:
+              $ref: 'https://raw.githubusercontent.com/remynollet/Kafka-tutoriel/main/splitted-kafka-asyncapi/sample/sample3.yaml'
