--- a/splitted-kafka-asyncapi/sample/sample2.yaml
+++ b/splitted-kafka-asyncapi/sample/sample2.yaml
@@ -1,5 +1,5 @@
-name: sample1
-summary: Details of sample1
+name: sample2
+summary: Details of sample2
 headers:
   ce_specversion: "1.0"
   ce_type: "io.microcks.example.user-signedup"
@@ -9,14 +9,14 @@ headers:
   content-type: application/avro
   sentAt: "2020-03-11T08:03:38Z"
 payload:
-  uid: "remynollet22"
+  uid: "jdoex21"
   birthdate: "1970-01-21"
-  email: "remy.nollet@gmail.com"
-  name: "nollet"
-  surname: "remy"
+  email: "john.doe@gmail.com"
+  name: "doe"
+  surname: "john"
   address:
-    address_id: "132"
+    address_id: 132
     cityname: "BlueCity"
-    number: "12"
-    postalcode: "123456"
+    number: 12
+    postalcode: 123456
     streetname: "PinkStreet Ave"
